Fix CK builder